[gd_scene load_steps=11 format=4 uid="uid://dqo2jc1bsf6gq"]

[ext_resource type="Script" uid="uid://dyghvp4ccoqxl" path="res://Prefab/TowerDefense/GUI/InGame/LevelControl/TowerDefenseInGameLevelControl.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bl6e6hkuxb5bt" path="res://Prefab/TowerDefense/GUI/InGame/WaveManager/TowerDefenseInGameWaveManager.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://byu56nyhyvc8x" path="res://Prefab/TowerDefense/GUI/InGame/VaseManager/TowerDefenseInGameVaseManager.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="4"]
[ext_resource type="FontFile" uid="uid://bibg4dobk6vpn" path="res://Asset/Font/fzjz.ttf" id="5"]
[ext_resource type="PackedScene" uid="uid://dcdg6cqo7kw4r" path="res://Prefab/TowerDefense/GUI/InGame/SunManager/TowerDefenseInGameSunManager.tscn" id="6"]

[sub_resource type="Animation" id="Animation_a0do0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUILayer/GUI/TipsLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ikp5p"]
resource_name = "ReadySetPlants"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUILayer/GUI/TipsLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["TOWERDEFENSE_READYSETPLANTS_READY", "TOWERDEFENSE_READYSETPLANTS_SET", "TOWERDEFENSE_READYSETPLANTS_PLANTS"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GUILayer/GUI/TipsLabel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.566667, 0.6, 1.16667, 1.2),
"transitions": PackedFloat32Array(1, 0, 1, 0, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(1, 1), Vector2(0.75, 0.75), Vector2(1, 1), Vector2(1.25, 1.25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GUILayer/GUI/TipsLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_suwbr"]
resource_name = "Tips"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GUILayer/GUI/TipsLabel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.25, 1.25), Vector2(0.75, 0.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dg45o"]
_data = {
&"RESET": SubResource("Animation_a0do0"),
&"ReadySetPlants": SubResource("Animation_ikp5p"),
&"Tips": SubResource("Animation_suwbr")
}

[node name="TowerDefenseInGameLevelControl" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="GUILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TowerDefenseInGameWaveManager" parent="GUILayer/GUI" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="TowerDefenseInGameVaseManager" parent="GUILayer/GUI" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 1

[node name="WorldEntryLabel" type="RichTextLabel" parent="GUILayer/GUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1080, 46)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.993
anchor_bottom = 0.973
offset_top = 512.0
offset_right = 7.56006
offset_bottom = -25.8
pivot_offset = Vector2(540, 23)
theme_override_constants/outline_size = 5
theme_override_fonts/normal_font = ExtResource("4")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "PLAYERS_TRIP_TO_MODERN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TipsLabel" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(1080, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -300.0
offset_right = 540.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(540, 300)
theme_override_colors/font_color = Color(0.898039, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerDefenseInGameSunManager" parent="." instance=ExtResource("6")]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_dg45o")
}
